--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -64,10 +64,10 @@
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #161616;
+    color: #6f92b3;
   }
   #mainNav.navbar-shrink .nav-link {
-    color: #161616;
+    color: #6f92b3;
     padding: 1.5rem 1.5rem 1.25rem;
     border-bottom: 0.25rem solid transparent;
   }
@@ -75,7 +75,7 @@
     color: #6f92b3;
   }
   #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
+    color: #6f92b3;
   }
   #mainNav.navbar-shrink .nav-link.active {
     color: #6f92b3;
@@ -103,7 +103,7 @@
   font-weight: 300;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+  background: -webkit-linear-gradient(rgb(111 146 179), rgb(111 146 179 / 48%));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
@@ -165,7 +165,7 @@
 
 .about-section {
   padding-top: 10rem;
-  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
+  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(111 146 179) 100%);
 }
 
 .about-section p {
@@ -205,7 +205,7 @@
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #6f92b3 100%), url("../img/bg-signup.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -278,11 +278,11 @@ a {
 
 a:focus, a:hover {
   text-decoration: none;
-  color: #3c6360;
+  color: #6f92b3;
 }
 
 .bg-black {
-  background-color: #161616 !important;
+  background-color: #6f92b3 !important;
 }
 
 .bg-primary {
