--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -297,16 +297,18 @@ footer {
   padding: 5rem 0;
 }
 
-/* Full Width Image
+/* Carousel
 ------------------------- */
 
-.bg-image-full {
+.carousel-item {
+  height: 100vh;
+  min-height: 350px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
 }
 
-/* Full Width Image End
+/* Carousel End
 ------------------------- */
