--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,7 +3,12 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
-
+ .carousel-colour {
+   background-color: #000000 !important;
+   padding: 1.2rem;
+   margin: 1.8rem;
+ }
+ 
 #mainNav {
   min-height: 56px;
   background-color: #fff;
